Fixed layout issue in events page

--- a/CaveroClubhuis/wwwroot/css/Events.css
+++ b/CaveroClubhuis/wwwroot/css/Events.css
@@ -109,7 +109,7 @@
     width: 50%;
 }
 
-button {
+.openModalBtn {
     float: right;
     background-color: #FFFFFF;
     border-radius: 45px;
